<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Book Detail"
        android:textSize="14pt"
        android:layout_margin="4pt"
        android:layout_gravity="center"></TextView>

    <ImageView
        android:id="@+id/ivBimage"
        android:layout_width="60pt"
        android:layout_height="80pt"
        android:layout_gravity="center"></ImageView>

    <Button
        android:id="@+id/btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/img"
        android:layout_gravity="center"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/b_id"
            android:gravity="center_vertical"></TextView>

        <EditText
            android:id="@+id/etBid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/b_name"
            android:gravity="center_vertical"></TextView>

        <EditText
            android:id="@+id/etBname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            ></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/b_category"
            android:gravity="center_vertical"></TextView>

        <Spinner
            android:id="@+id/spinBcategory"
            android:layout_width="match_parent"
            android:layout_height="15pt"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/b_author"
            android:gravity="center_vertical"></TextView>

        <EditText
            android:id="@+id/etBauthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/b_price"
            android:gravity="center_vertical"></TextView>

        <EditText
            android:id="@+id/etBprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"></EditText>
    </LinearLayout>
    <Button
        android:id="@+id/btnEdit"
        android:layout_width="45pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:layout_marginTop="4pt"></Button>

</LinearLayout>