<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cattitle"
        android:textSize="14pt"
        android:layout_margin="4pt"
        android:layout_gravity="center"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/c_id"
            android:gravity="center_vertical"></TextView>

        <EditText
            android:id="@+id/etCid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/c_name"
            android:gravity="center_vertical"></TextView>

        <EditText
            android:id="@+id/etCname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="45pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:layout_marginTop="4pt"></Button>

</LinearLayout>