<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logintitle"
        android:textSize="14pt"
        android:layout_margin="4pt"
        android:layout_gravity="center"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2pt"
        android:padding="2pt">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="10pt"
            android:textStyle="bold"></TextView>
        <EditText
            android:id="@+id/etTaiKhoan"
            android:inputType="text"
            android:text="admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2pt"
        android:padding="2pt">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="10pt"
            android:textStyle="bold"></TextView>
        <EditText
            android:id="@+id/etMatKhau"
            android:inputType="textPassword"
            android:text="admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="11pt"
        android:text="@string/signin"></Button>

</LinearLayout>