<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="2pt">

    <ImageView
        android:id="@+id/ivHinh"
        android:layout_width="50pt"
        android:layout_height="match_parent"></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1pt">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_id"
                android:textColor="@color/black"
                android:layout_marginRight="2pt"
                android:textSize="8pt"></TextView>
            <TextView
                android:id="@+id/tvMa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="8pt"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1pt">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_name"
                android:textColor="@color/black"
                android:layout_marginRight="2pt"
                android:textSize="8pt"></TextView>
            <TextView
                android:id="@+id/tvTen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="8pt"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1pt">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_category"
                android:textColor="@color/black"
                android:layout_marginRight="2pt"
                android:textSize="8pt"></TextView>
            <TextView
                android:id="@+id/tvLoai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="8pt"></TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>